Breaking long word to stop content overflow.

--- a/docs/root/_static/css/envoy.css
+++ b/docs/root/_static/css/envoy.css
@@ -9,3 +9,7 @@
 table.docutils div.line-block {
     margin-left: 0;
 }
+/* Breaking long words */
+.wy-nav-content {
+  overflow-wrap: break-word;
+}
